--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김건우 포트폴리오</title>
+    <title>Kunwoo Kim</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
