--- a/index.html
+++ b/index.html
@@ -136,10 +136,11 @@
     </header>
 
     <section class="hero">
-        <h2>안녕하세요, 저는 김건우입니다 👋</h2>
-        <p>창의적이고 성장해가는 주니어소프트웨어 개발자이며<br>자율주행자동차 개발자를 꿈꾸고 있습니다</p>
+        <h2><span class="desktop-text">안녕하세요, 저는 김건우입니다 👋</span><span class="mobile-text">안녕하세요<br>저는 김건우입니다 👋</span></h2>
+        <p>창의적이고 성장해가는 주니어 소프트웨어 개발자이며<br>자율주행자동차 개발자를 꿈꾸고 있습니다</p>
         <a href="https://buymeacoffee.com/" class="btn">커피 사주기</a>
     </section>
+    
 
     <section id="edu" style="margin-bottom: -10px; padding-bottom: 0px;">
         <h1 style="font-size: 2.2rem; font-family: 'Spoqa Han Sans Neo', 'sans-serif'; margin-bottom: 1.5rem;">🎓 다닌 곳</h1>
