--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section class="hero">
         <h2><span class="desktop-text">안녕하세요, 저는 김건우입니다 👋</span><span class="mobile-text">안녕하세요<br>저는 김건우입니다 👋</span></h2>
         <p>창의적이고 성장해가는 주니어 소프트웨어 개발자이며<br>자율주행자동차 개발자를 꿈꾸고 있습니다</p>
-        <a href="https://buymeacoffee.com/" class="btn">커피 사주기</a>
+        <a href="https://buymeacoffee.com/aidengoldkr" class="btn">커피 사주기</a>
     </section>
     
 
